--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
                         <input name="name" type="text"  size="50" class="form-control" placeholder="Your Name" required>                 
                     </div>
                     <div class="form-group col-sm-6">
-                        <input name="email type="email" class="form-control" placeholder="Enter Email"requried>                 
+                        <input name="email" type="email" class="form-control" placeholder="Enter Email"requried>                 
                     </div>
-                    <div class="form-group col-sm-6">
-                        <input name="message" type="text" size="500" class="form-control" placeholder="Your message" required style="margin-left:50% ;">                 
+                    <div class="form-group col-sm-12 mt-3">
+                        <input name="message" type="text" size="500" class="form-control" placeholder="Your message" required style="text-align: center;">                 
                     </div>
                  
                     <div class="form-group col-sm-12 mt-3">
