--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-4">
-                    <a href="https://solletivivek.github.io/new-prot/" class="portfolio-card">
+                    <a href="http://sdptth.pythonanywhere.com/" class="portfolio-card">
                         <img src="assets/imgs/1.jpg" class="portfolio-card-img">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Basic personal website</h5>
-                                <p class="font-weight-normal">Category: Website using html and css</p>
+                                <h4>Bussiness system</h5>
+                                <p class="font-weight-normal">Category: bussiness system using Django and MySQL</p>
                             </span>                         
                         </span>                     
                     </a>
@@ -160,12 +160,12 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="http://sdptth.pythonanywhere.com/" class="portfolio-card">
+                    <a href="https://solletivivek.github.io/new-prot/" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/3.jpg" class="img-responsive rounded" ">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Bussiness system</h5>
-                                <p class="font-weight-normal">bussiness system using Django and MySQL</p>
+                                <h4>Basic personal website</h5>
+                                <p class="font-weight-normal">Category: Website using html and css</p>
                             </span>                         
                         </span>                     
                     </a>
