--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </h1>
             <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
 
-            <button class="btn btn-primary" href="#portfolio">Visit My Works</button>
+            <button class="btn btn-primary" onclick="navigateToPortfolio()">Visit My Works</button> 
         </div>              
     </header><!-- end of page header -->
 
@@ -268,6 +268,12 @@
 
     
     <script src="assets/js/main.js"></script>
-
+ <script>
+        function navigateToPortfolio() {
+          // Implement the code to scroll or display the portfolio section here.
+          // For example, using vanilla JavaScript:
+          document.getElementById('portfolio').scrollIntoView({ behavior: 'smooth' });
+        }
+        </script>
 </body>
 </html>
