--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-4">
-                    <a href="http://sdptth.pythonanywhere.com/" class="portfolio-card">
+                    <a href="https://github.com/solletivivek/Travel-Touriusm-Hospitality-using-Django" class="portfolio-card">
                         <img src="assets/imgs/1.jpg" class="portfolio-card-img">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
