laste update in 21aug

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <span class="up">HI!</span>
                 <span class="down">I am Vivek</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
+            <p class="header-subtitle">FULL STACK WEB DEVELOPER</p>            
 
             <button class="btn btn-primary" onclick="navigateToPortfolio()">Visit My Works</button> 
         </div>              
@@ -81,7 +81,7 @@
                         I am a creative designer and developer, who aims to work with small businesses and marginalized communities to bring their passions to life. I offer both design and development services of web applications or websites.I am undergraduate from KL university,pursing my degree in B.Tech CSE 
                         <br>Whether the internet or the outdoors, I love exploring, and I apply this open mindset to my creative projects. I am happiest when I am using my passions to help you pursue yours!             
                     </p>
-                    <a href="https://drive.google.com/file/d/1XqGOTbheKVek1ZoTBZJn8qAuo4gpozVB/view?usp=sharing" ><button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button> </a>
+                    <a href="https://drive.google.com/file/d/1NfUNudh_x7x3BsbpoYtu2RPCZZsVz_rv/view?usp=sharing" ><button class="btn-rounded btn btn-outline-primary mt-4">View My CV</button> </a>
                  
                 </div>              
             </div><!-- end of about wrapper -->
@@ -135,6 +135,12 @@
         </div>
     </section><!-- end of service section -->
 
+
+
+
+
+
+
     <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
@@ -143,11 +149,22 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-4">
-                    <a href="https://github.com/solletivivek/Travel-Touriusm-Hospitality-using-Django" class="portfolio-card">
-                        <img src="assets/imgs/1.jpg" class="portfolio-card-img">    
+                    <a href="https://klefmayavi.tech/" class="portfolio-card">
+                        <img src="assets/imgs/mayavi.png" class="portfolio-card-img">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Bussiness system</h5>
+                                <h4>Club Website</h5>
+                                <p class="font-weight-normal">Category: website using html,css and js and backend for polybase</p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://github.com/solletivivek/Travel-Touriusm-Hospitality-using-Django" class="portfolio-card">
+                        <img src="assets/imgs/travel.png" class="portfolio-card-img">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Travel Tourisum bussiness system</h5>
                                 <p class="font-weight-normal">Category: bussiness system using Django and MySQL</p>
                             </span>                         
                         </span>                     
@@ -155,7 +172,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="https://solletivivek.github.io/tinder-clone/#cta" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/2.jpg" class="img-responsive rounded" >
+                        <img class="portfolio-card-img" src="assets/imgs/tinder.png" class="img-responsive rounded" >
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Tinder landing page</h5>
@@ -164,7 +181,7 @@
                         </span>                         
                     </a>
                 </div>
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <a href="https://solletivivek.github.io/new-prot/" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/3.jpg" class="img-responsive rounded" ">    
                         <span class="portfolio-card-overlay">
@@ -174,11 +191,30 @@
                             </span>                         
                         </span>                     
                     </a>
+                </div> -->
+            </div><!-- end of row -->
+        </div><!-- end of container -->
+    </section> <!-- end of portfolio section -->
+    <section class="section" id="portfolio">
+        <div class="container text-center">
+            <p class="section-subtitle">What I Earned ?</p>
+            <h6 class="section-title mb-6">Global Certifications</h6>
+            <!-- row -->
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="https://www.credly.com/badges/9429866d-181f-4ac3-bab7-4fb4ebbe125c/public_url" class="portfolio-card">
+                        <img src="assets/imgs/cp.png" class="portfolio-card-img" style="width: 70%; height: auto; display: block; margin: 0 auto;">  
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>AWS Cloud Practioner</h5>
+                                <p class="font-weight-normal">Category: Amazone web services</p>
+                            </span>                         
+                        </span>                     
+                    </a>
                 </div>
             </div><!-- end of row -->
         </div><!-- end of container -->
     </section> <!-- end of portfolio section -->
-
 
     <!-- section -->
     <section class="section-sm bg-primary">
