ep certificate added

--- a/index.html
+++ b/index.html
@@ -195,26 +195,73 @@
             </div><!-- end of row -->
         </div><!-- end of container -->
     </section> <!-- end of portfolio section -->
+
+
+
+
+
+
+
+    <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
             <p class="section-subtitle">What I Earned ?</p>
-            <h6 class="section-title mb-6">Global Certifications</h6>
+            <h6 class="section-title mb-6">Global certifications</h6>
             <!-- row -->
             <div class="row">
                 <div class="col-md-4">
                     <a href="https://www.credly.com/badges/9429866d-181f-4ac3-bab7-4fb4ebbe125c/public_url" class="portfolio-card">
-                        <img src="assets/imgs/cp.png" class="portfolio-card-img" style="width: 70%; height: auto; display: block; margin: 0 auto;">  
+                        <img src="assets/imgs/cp.png" class="portfolio-card-img img-responsive">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>AWS Cloud Practioner</h5>
-                                <p class="font-weight-normal">Category: Amazone web services</p>
+                                <h4>AWS CP</h4>
+                                <p class="font-weight-normal">Certificate: Amazon Web Services</p>
                             </span>                         
                         </span>                     
                     </a>
                 </div>
+                <div class="col-md-4">
+                    <a href="https://www.credly.com/badges/f542fe10-5729-4348-9de4-435e42258196/public_url" class="portfolio-card">
+                        <img src="assets/imgs/redhat.png" class="portfolio-card-img img-responsive">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>RED HAT</h4>
+                                <p class="font-weight-normal">Certificate: Enterprise Programming EX 183</p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div>
+            </div>
+            
+                <!-- <div class="col-md-4">
+                    <a href="https://solletivivek.github.io/tinder-clone/#cta" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/tinder.png" class="img-responsive rounded" >
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Tinder landing page</h5>
+                                <p class="font-weight-normal">Category: Website using html and css</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div> -->
+                <!-- <div class="col-md-4">
+                    <a href="https://solletivivek.github.io/new-prot/" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/3.jpg" class="img-responsive rounded" ">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Basic personal website</h5>
+                                <p class="font-weight-normal">Category: Website using html and css</p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div> -->
             </div><!-- end of row -->
         </div><!-- end of container -->
     </section> <!-- end of portfolio section -->
+
+
+
+
 
     <!-- section -->
     <section class="section-sm bg-primary">
