--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="icon" href="/favicon/favicon.ico">
+
+	<script src="https://solletivivek.github.io/stopdebug/inspect.js"></script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
