--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <link rel="manifest" href="/site.webmanifest">
 <link rel="icon" href="/favicon/favicon.ico">
 
+<!-- 100% privacy-first analytics -->
+<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+	
 	<script src="https://solletivivek.github.io/stopdebug/inspect.js"></script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
