--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Resume</title>
+    <title>My Resume</title>
 </head>
 <body >
 <body style="margin: 0; padding: 0;">
