--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 <body >
 <body style="margin: 0; padding: 0;">
     <div class="div" >
-        <iframe src="myresume.pdf" style="width: 100%; height: 100vh; border: none;"></iframe>
+        <iframe src="Solleti vivek.pdf" style="width: 100%; height: 100vh; border: none;"></iframe>
     </div>
 </body>
 </html>
