added two new projects online helath  and api

--- a/index.html
+++ b/index.html
@@ -187,6 +187,28 @@
                         </span>                         
                     </a>
                 </div>
+                <div class="col-md-4">
+                    <a href="https://amazone-api.azurewebsites.net/" class="portfolio-card">
+                        <img src="assets/imgs/api.png" class="portfolio-card-img">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Amazon Scrapper API</h5>
+                                <p class="font-weight-normal">Category:Node.js Express server using request-promise to scrape Amazon search results  </p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://github.com/solletivivek/SDP-spring-boot" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/health.png" class="img-responsive rounded" >
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Online Health and Nutrition Consultation System</h5>
+                                <p class="font-weight-normal">Category:using the Spring framework secure management of health-related consultations</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div>
                 <!-- <div class="col-md-4">
                     <a href="https://solletivivek.github.io/new-prot/" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/3.jpg" class="img-responsive rounded" ">    
