--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="https://github.com/solletivivek/SDP-spring-boot" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/health.png" class="img-responsive rounded" >
+                        <img class="portfolio-card-img" src="assets/imgs/health.png" class="img-responsive rounded" loading="lazy">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Online Health and Nutrition Consultation System</h5>
