--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         I am a creative designer and developer, who aims to work with small businesses and marginalized communities to bring their passions to life. I offer both design and development services of web applications or websites.I am undergraduate from KL university,pursing my degree in B.Tech CSE 
                         <br>Whether the internet or the outdoors, I love exploring, and I apply this open mindset to my creative projects. I am happiest when I am using my passions to help you pursue yours!             
                     </p>
-                    <a href="resume.html" ><button class="btn-rounded btn btn-outline-primary mt-4">View My CV</button> </a>
+                    <a href="resume" ><button class="btn-rounded btn btn-outline-primary mt-4">View My CV</button> </a>
                  
                 </div>              
             </div><!-- end of about wrapper -->
