--- a/index.html
+++ b/index.html
@@ -187,6 +187,28 @@
                         </span>                         
                     </a>
                 </div>
+		    <div class="col-md-4">
+                    <a href="https://figma-clone-viveks-projects-85683d4b.vercel.app/" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/clone.png" class="img-responsive rounded" loading="lazy">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Figma Clone</h5>
+                                <p class="font-weight-normal">Category:using liveblocks canvas extension</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div>
+		     <div class="col-md-4">
+                    <a href="https://solletivivek.github.io/Whatsapp-link-generator/" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/wlg.png" class="img-responsive rounded" loading="lazy">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Whatsapp Link Generator</h5>
+                                <p class="font-weight-normal">Category:using html,css and js</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div>
                 <div class="col-md-4">
                     <a href="https://github.com/solletivivek/Travel-Touriusm-Hospitality-using-Django" class="portfolio-card">
                         <img src="assets/imgs/travel.png" class="portfolio-card-img">    
