--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         </span>                         
                     </a>
                 </div>
-		    <div class="col-md-4">
+<!-- 		    <div class="col-md-4">
                     <a href="https://figma-clone-viveks-projects-85683d4b.vercel.app/" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/clone.png" class="img-responsive rounded" loading="lazy">
                         <span class="portfolio-card-overlay">
@@ -197,7 +197,7 @@
                             </span>                         
                         </span>                         
                     </a>
-                </div>
+                </div> -->
 		     <div class="col-md-4">
                     <a href="https://solletivivek.github.io/Whatsapp-link-generator/" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/wlg.png" class="img-responsive rounded" loading="lazy">
