Add portfolio section and update subtitle in index.html; create VSCode settings

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <span class="up">HI!</span>
                 <span class="down">I am Vivek</span>
             </h1>
-            <p class="header-subtitle">FULL STACK WEB DEVELOPER</p>            
+            <p class="header-subtitle">FULL STACK WEB DEVELOPER & UI/UX Designer</p>            
 
             <button class="btn btn-primary" onclick="navigateToPortfolio()">Visit My Works</button> 
         </div>              
@@ -248,6 +248,105 @@
         </div><!-- end of container -->
     </section> <!-- end of portfolio section -->
 
+    <section class="section" id="portfolio">
+        <div class="container text-center">
+            <p class="section-subtitle">What I Did ?</p>
+            <h6 class="section-title mb-6">UI/UX Portfolio</h6>
+            <!-- row -->
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="https://www.figma.com/design/3ZYRPGe53MUTq37jQItOW8/Portfolio?node-id=26-6525&p=f&t=N5eZjmK5VJIO7YP6-0" class="portfolio-card">
+                        <img src="assets/imgs/mayavi.png" class="portfolio-card-img">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Club Website</h5>
+                                <p class="font-weight-normal">Category: website using html,css and js and backend for polybase</p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://www.figma.com/design/3ZYRPGe53MUTq37jQItOW8/Portfolio?node-id=26-6525&p=f&t=N5eZjmK5VJIO7YP6-0" class="portfolio-card">
+                        <img src="assets/imgs/Desktop - 1.png" class="portfolio-card-img">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Photography portfolio</h5>
+                                <p class="font-weight-normal">Category:Node.js Express server using request-promise to scrape Amazon search results  </p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://www.figma.com/design/3ZYRPGe53MUTq37jQItOW8/Portfolio?node-id=26-6525&p=f&t=N5eZjmK5VJIO7YP6-0" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/Cover Page.png" class="img-responsive rounded" loading="lazy">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>AdBoostly mobile app</h5>
+                                <p class="font-weight-normal">Category:using the Spring framework secure management of health-related consultations</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div>
+<!-- 		    <div class="col-md-4">
+                    <a href="https://figma-clone-viveks-projects-85683d4b.vercel.app/" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/clone.png" class="img-responsive rounded" loading="lazy">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Figma Clone</h5>
+                                <p class="font-weight-normal">Category:using liveblocks canvas extension</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div> -->
+		     <div class="col-md-4">
+                <a href="https://www.figma.com/design/3ZYRPGe53MUTq37jQItOW8/Portfolio?node-id=26-6525&p=f&t=N5eZjmK5VJIO7YP6-0" class="portfolio-card">
+                    <img class="portfolio-card-img" src="assets/imgs/DPL-redesign.png" class="img-responsive rounded" loading="lazy">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Liberary Home page</h5>
+                                <p class="font-weight-normal">Category:using html,css and js</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://www.figma.com/design/3ZYRPGe53MUTq37jQItOW8/Portfolio?node-id=26-6525&p=f&t=N5eZjmK5VJIO7YP6-0" class="portfolio-card">
+                        <img src="assets/imgs/Screenshot 2025-01-25 at 1.28.53 PM.png" class="portfolio-card-img">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Abhi's Landing page</h5>
+                                <p class="font-weight-normal">Category: bussiness system using Django and MySQL</p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://www.figma.com/design/3ZYRPGe53MUTq37jQItOW8/Portfolio?node-id=26-6525&p=f&t=N5eZjmK5VJIO7YP6-0" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/Screenshot 2025-01-25 at 1.29.40 PM.png" class="img-responsive rounded" >
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Tinder landing page</h5>
+                                <p class="font-weight-normal">Category: Website using html and css</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div>
+               
+               
+                <!-- <div class="col-md-4">
+                    <a href="https://solletivivek.github.io/new-prot/" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/3.jpg" class="img-responsive rounded" ">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Basic personal website</h5>
+                                <p class="font-weight-normal">Category: Website using html and css</p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div> -->
+            </div><!-- end of row -->
+        </div><!-- end of container -->
+    </section> <!-- end of portfolio section -->
 
 
 
