Update button action in index.html to link to resume.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </h1>
             <p class="header-subtitle">FULL STACK WEB DEVELOPER & UI/UX Designer</p>            
 
-            <button class="btn btn-primary" onclick="navigateToPortfolio()">Visit My Works</button> 
+            <button class="btn btn-primary" onclick="window.location.href='resume.html'">Visit My Works</button> 
         </div>              
     </header><!-- end of page header -->
 
